samples/_failures_safe/1761153305_40f1d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7911feec.c: In function ‘main’:
./samples/SAFE/__tmp_7911feec.c:185:21: error: expected declaration or statement at end of input
  185 |                     printf("Invalid input\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_7911feec.c:185:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7911feec.c:185:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7911feec.c:185:21: error: expected declaration or statement at end of input
